--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -1,3 +1,16 @@
-.title {
-  background: rgb(121, 242, 157);
+.login {
+  width: 100%;
+  height: 100%;
+  background: url('~@/assets/login-bg.png');
+  background-size: 100% 100%;
+  padding-top: 60px;
+  .form_bg {
+    background: #fff;
+    padding: 60px;
+    :global {
+      .ant-btn-primary {
+        width: 100%;
+      }
+    }
+  }
 }
